scripts/cloudformation/monolith/snippets.yaml




  ClusterRecordSetGroup:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: >-
        DNS record set group for the member nodes of the ICP cluster and the boot node.
      HostedZoneId: !Ref CluterDNS
      RecordSets:




  # Created this for use with the Master node ELB, but a
  # network ELB can't use security groups.
  # Eventually delete this.
  ExternalMasterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref IBMCloudPrivateVPC
      GroupDescription: >-
        Seucrity group enabling external access to the Master node(s).
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref ExternalICPAdminLocation
        - IpProtocol: tcp
          FromPort: 8001
          ToPort: 8001
          CidrIp: !Ref ExternalICPAdminLocation
        - IpProtocol: tcp
          FromPort: 8500
          ToPort: 8500
          CidrIp: !Ref ExternalICPAdminLocation
        - IpProtocol: tcp
          FromPort: 9443
          ToPort: 9443
          CidrIp: !Ref ExternalICPAdminLocation
      Tags:
        - Key: Name
          Value: ExternalMasterSecurityGroup
        - Key: Owner
          Value: !Ref ResourceOwner

  ProxyNodeLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: network
      Subnets:
        - !Ref ICPClusterSubnet
      Tags:
        - Key: Name
          Value: ProxyNodeLoadBalancer
        - Key: Owner
          Value: !Ref ResourceOwner

  ProxyNodeLoadBalancer80Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ProxyNodeLoadBalancer
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ProxyAutoScalingGroup
      Port: 80
      Protocol: HTTP

  ProxyNodeLoadBalancer443Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ProxyNodeLoadBalancer
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ProxyAutoScalingGroup
      Port: 443
      Protocol: TCP

  # Created initially for the Proxy node ELB, but network ELB
  # can't use a SecurityGroup.
  # Eventually, delete this
  ExternalProxySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref IBMCloudPrivateVPC
      GroupDescription: >-
        Seucrity group enabling external access to the Proxy node(s).
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref ExternalApplicationLocation
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref ExternalApplicationLocation
      Tags:
        - Key: Name
          Value: ExternalProxySecurityGroup
        - Key: Owner
          Value: !Ref ResourceOwner
